--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
 
         		<h3>Arithmetic for IT</h3>
         		
-        		<p>Projet ayant pour but de mettre en place la cryptographie RS et El Gamal, ce projet à demandé l'implémentation de diverses fonctions arithmétique tel que :</p>
+        		<p>Projet ayant pour but de mettre en place la cryptographie <i>RSA</i> et <i>El Gamal</i>, ce projet à demandé l'implémentation de diverses fonctions arithmétiques tel que :</p>
 
         		<div id="Projets_Arithmetique">
         		<ul>
         			<li>Plus grand diviseur commun(PGCD)</li>
-        			<li>Remonté de l'agorithme <i>d'Euclide</i></li>
+        			<li>Remontée de l'agorithme <i>d'Euclide</i></li>
         			<li>Puissance modulaire à complexité O(log n)</li>
         			<li>Test si un nombre est premier, pseudo premier, premier jumeau</li>
         			<li><strong>Crible d'Erathosthene</strong></strong></li>
-        			<li><strong>Génération de clefs</strong> publique/privé <i>RSA</i> et <i>El Gamal</i></li>
+        			<li><strong>Génération de clefs</strong> publiques/privés <i>RSA</i> et <i>El Gamal</i></li>
         			<li><strong>Encritption/Decription</strong> <i>RSA</i>, <i>El Gamal</i> et chiffrement <i>César</i></li>
         			<li><strong>Brute-force</strong> <i>RSA</i></li>
         		</ul>
@@ -102,6 +102,7 @@
         			<h2>C#</h2>
         			<p><strong>En cours:</strong>
         			Projet du deuxième semestre à EPITA:
+                    Création d'un jeu d'infiltration, j'occupe le poste de
         			Chef de projet responsable de la partie IA et multijoueur 
         			<br><br>
         			<a href="Pdf/ProjectSodium__Cahier_des_charges.pdf">Cahier des charges </a></p>
