--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         		</a>
 
         		<h1>Contact</h1>
-        		<p>En recherche de stage, disponible de Juin à fin Aôut</p>
+        		<p>En recherche de stage de 4 semaines, disponible de Juin à fin Aôut</p>
         		<div id="Contact">
         			<ul>
         				<li><a href="https://github.com/alexandrediasldev"><i class="fab fa-github-square fa-2x"></i></a><p><a href="https://github.com/alexandrediasldev">https://github.com/<br>alexandrediasldev</a></p>
