--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         			<li>Remontée de l'agorithme <i>d'Euclide</i></li>
         			<li>Puissance modulaire à complexité O(log n)</li>
         			<li>Test afin de voir si un nombre est premier, pseudo premier, premier jumeau</li>
-        			<li><strong>Crible d'Erathosthene</strong></strong></li>
+        			<li><strong>Crible d'Ératosthène</strong></strong></li>
         			<li><strong>Génération de clefs</strong> (publique / privée) <i>RSA</i> et <i>El Gamal</i></li>
         			<li><strong>Chiffrement / Dechiffrement</strong> <i>RSA</i>, <i>El Gamal</i> et chiffrement <i>César</i></li>
         			<li><strong>Brute-force</strong> <i>RSA</i></li>
