--- a/index2.html
+++ b/index2.html
@@ -12,8 +12,23 @@
     <body>
     	<div id = "bloc_page">
 
-
+    		<nav>
+    			<ul>
+    				<li>Placeholderimage</li>
+    				<div id="menu">
+    				<li>PROJETS</li>
+    				<li>CV</li>
+    				<li>CONTACT</li>
+    				</div>
+    			</ul>
+    		</nav>
+    		<section id="Moi">
+    			<h1>Alexandre DIAS</h1>
+    			<p>Je suis passionné depuis la classe de 1ère par la programmation qui me permet de réaliser mes divers projets en utilisant par exemple le C++ (avec Qt), C# (avec Unity) et OCaml. Le web (HTML/CSS) me permet de présenter mes créations.
+Actuellement en recherche d'un stage de 4 semaines (disponible de Juin à fin Août)</p>
+    		</section>
     		<section id ="Projets">
+    			<h1>Mes Projets</h1>
     			<ul>
     				<li><img src="Image/server.png"></li>
     				<li><img src="Image/rsa.png"></li>
@@ -23,6 +38,18 @@
     				<li><img src="Image/gameoflife.png"></li>
     				
     			</ul>
+    		</section>
+    		<section id ="Contact">
+    			
+    			<ul>
+        				<li><a href="https://github.com/alexandrediasldev"><i class="fab fa-github-square fa-4x"></i></a>
+        				</li>
+
+        				<li><a href="mailto:alexandre.diasldev@gmail.com"><i class="fas fa-envelope fa-4x"></i></a></li>
+        		<li><a href="https://www.linkedin.com/in/alexandre-dias-5a8583178/"><i class="fab fa-linkedin fa-4x"></i></a></li>
+
+        			</ul>
+
     		</section>
     	</div>
 
