ajout de la couleur de fond

--- a/index2.html
+++ b/index2.html
@@ -33,12 +33,12 @@ Actuellement en recherche d'un stage de 4 semaines (disponible de Juin à fin Ao
     		<section id ="Projets">
     			<h1>Mes Projets</h1>
     			<ul>
-    				<li><a href="Projet_chattcp.html"><img src="Image/server.png"></a></li>
-    				<li><a href="Projet_rsa.html"><img src="Image/rsa.png"></a></li>
-    				<li><a href="Projet_fractales.html"><img src="Image/fract.png"></a></li>
-    				<li><a href="Projet_tylas.html"><img src="Image/tylas.png"></a></li>
-    				<li><a href="Projet_navigateur_web.html"><img src="Image/browser.png"></a></li>
-    				<li><a href="Projet_game_of_life.html"><img src="Image/gameoflife.png"></a></li>
+    				<li><a href="Projet_chattcp.html"><img src="Image/server.png" alt="Chat"></a></li>
+    				<li><a href="Projet_rsa.html"><img src="Image/rsa.png" alt="RSA"></a></li>
+    				<li><a href="Projet_fractales.html"><img src="Image/fract.png" alt = "Fractales"></a></li>
+    				<li><a href="Projet_tylas.html" alt="Tylas"><img src="Image/tylas.png"></a></li>
+    				<li><a href="Projet_navigateur_web.html" alt="Navigateur web"><img src="Image/browser.png"></a></li>
+    				<li><a href="Projet_game_of_life.html" alt="Jeu de la vie"><img src="Image/gameoflife.png"></a></li>
     				
     			</ul>
     		</section>
