--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet"  href="style2.css">
+        <link rel="stylesheet"  href="style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 
@@ -18,7 +18,7 @@
                 <ul>
                     <li><div id ="logo">AD</div></li>
                     <div id="menu">
-                    <li><a href="index2.html#Projets">PROJETS</a></li>
+                    <li><a href="index.html#Projets">PROJETS</a></li>
                     <li><a href="Pdf/CV.pdf">CV</a></li>
                     <li><a href="#Contact">CONTACT</a></li>
                     </div>
