fixed image bug on mobile

--- a/Projet_chattcp.html
+++ b/Projet_chattcp.html
@@ -28,7 +28,7 @@
     			<div id="Projets_style_main">
     				<h1>Chat TCP</h1>
     				<p>Serveur:</p>
-    				<img src="Image/serveurchat.png">
+    				<img src="Image/serveurchatbig.png">
     				<p>Client:</p>
     				<img src="Image/clientchat.png">
 
