--- a/Projet_game_of_life.html
+++ b/Projet_game_of_life.html
@@ -27,7 +27,7 @@
     			<div id="Projets_style_main">
     				<h1>Game of life</h1>
     				<p>"Pattern" du clown:</p>
-    				<video src="Image/ocamlclown.mp4" controls  width="600"></video>
+    				<video src="Image/ocamlclown.mp4" controls ></video>
     				
 
     			</div>
