--- a/Projet_tylas.html
+++ b/Projet_tylas.html
@@ -28,11 +28,13 @@
     			<div id="Projets_style_main">
     				<h1>Project Sodium</h1>
     				<p>Cahier des charges:</p>
-                    <embed src="Pdf/ProjectSodium__Cahier_des_charges.pdf" width="500" height="700" 
- type="application/pdf">
+                    <img src="Image/cahierdescharges.png">
 
     			</div>
     			<aside id="Projets_style_aside">
+                    <h1>Lien:<h1>
+                    <a href="Pdf/ProjectSodium__Cahier_des_charges.pdf">
+                    Cahier des charges</a>
     				<h1>Résumé</h1>
     				<p><b>En cours :</b> Projet du deuxième semestre à EPITA : Création d'un jeu d'infiltration, j'occupe le poste de Chef de projet, responsable de la partie IA et multijoueur </p>
     			</aside>
