--- a/Projet_game_of_life.html
+++ b/Projet_game_of_life.html
@@ -33,7 +33,7 @@
     			</div>
     			<aside id="Projets_style_aside">
     				<h1>Résumé</h1>
-    				<p>Création d'un automate cellulaire en utilisant le module graphique de OCaml. Les différentes règles régissant le jeu sont implémentées.Différents modes de jeu tel que le commencement du jeu avec des cellules placés aléatoirement ou encore le chargement de "pattern" pendant n générations.</p>
+    				<p>Création d'un automate cellulaire en utilisant le module graphique de OCaml. Les différentes règles régissant le jeu sont implémentées.Différents modes de jeu tel que le commencement du jeu avec des cellules placées aléatoirement ou encore le chargement de "pattern" pendant un nombre de générations donné.</p>
     			</aside>
     		</section>
 
