--- a/Projet_tylas.html
+++ b/Projet_tylas.html
@@ -36,7 +36,7 @@
                     <a href="Pdf/ProjectSodium__Cahier_des_charges.pdf">
                     Cahier des charges</a>
     				<h1>Résumé</h1>
-    				<p><b>En cours :</b> Projet du deuxième semestre à EPITA : Création d'un jeu d'infiltration, j'occupe le poste de Chef de projet, responsable de la partie IA et multijoueur </p>
+    				<p><b>En cours :</b> Projet du deuxième semestre à EPITA : Création d'un jeu d'infiltration, j'occupe le poste de Chef de projet, responsable des parties IA et multijoueur </p>
     			</aside>
     		</section>
 
