--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
 
     		<section id="Moi">
     			<h1>Alexandre DIAS</h1>
-    			<p>Je suis passionné depuis la classe de 1ère par la programmation qui me permet de réaliser mes divers projets en utilisant par exemple le C++ (avec Qt), C# (avec Unity) et OCaml. Le web (HTML/CSS) me permet de présenter mes créations.
-Actuellement en recherche d'un stage de 4 semaines (disponible de Juin à fin Août)</p>
+    			<p>Je suis passionné depuis la classe de 1ère par la programmation qui me permet de réaliser mes divers projets en utilisant par exemple le <strong>C++</strong> (avec Qt), <strong>C#</strong> (avec Unity) et <strong>OCaml</strong>. Le web (<strong>HTML/CSS</strong>) me permet de présenter mes créations.<i>
+Actuellement en recherche d'un stage de 4 semaines (disponible de Juin à fin Août)</i></p><br>
+<img src="Image/alexandredias.png" alt="alexandredias">
+<br><br>
     		</section>
     		<section id ="Projets">
     			<h1>Mes Projets</h1>
