--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     		<section id="Moi">
     			<h1>Alexandre DIAS</h1>
+                <p>Site non mise à jour depuis Février 2019</p>
     			<p>Je suis passionné depuis la classe de 1ère par la programmation qui me permet de réaliser mes divers projets en utilisant par exemple le <strong>C++</strong> (avec Qt), <strong>C#</strong> (avec Unity) et <strong>OCaml</strong>. Le web (<strong>HTML/CSS</strong>) me permet de présenter mes créations.<i>
 Actuellement en recherche d'un stage de 4 semaines (disponible de Juin à fin Août)</i></p><br>
 <img src="Image/alexandredias.png" alt="alexandredias">
