--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
                 <ul>
                     <li><div id ="logo">AD</div></li>
                     <div id="menu">
-                    <li><a href="Pdf/CV.pdf">CV</a></li>
                     <li><a href="#Contact">CONTACT</a></li>
                     </div>
                 </ul>
@@ -24,12 +23,7 @@
 
     		<section id="Moi">
     			<h1>Alexandre DIAS</h1>
-    			<p>Étudiant en quatrième année à <strong>EPITA</strong> en spécialisation télécommunication. Passionné par le développement logiciel, l'infrastructure et le réseau.<br>
-
-J'ai réalisé de nombreux projets m'ayant beaucoup apporté, comme un <strong>jeu vidéo</strong> sur unity, un projet de <strong>Deep Learning OCR</strong>, un projet <strong>d'interpréteur shell</strong>, <strong>une IA d'échecs</strong> et un <strong>serveur HTTP</strong>.
-<br>
-
-J'ai aussi donné des cours à EPITA pour les étudiants en deuxième année de prépa intégrée et j'ai été un assistant au <strong>laboratoire TCOM</strong>, ou j'ai pu réaliser et encadrer des TPs sur divers sujets (Docker, Wireshark, Mise en place d'infrastructure).
+                        <p> Engineer focused on <strong>DevOps</strong>, <strong>Cloud</strong>, <strong>infrastructure</strong>, and <strong>networking</strong>.
 </p>
                         
 <br>
@@ -46,6 +40,8 @@ J'ai aussi donné des cours à EPITA pour les étudiants en deuxième année de 
         				</li>
 
         				<li><a href="mailto:alexandre.diasldev@gmail.com"><i class="fas fa-envelope fa-4x"></i></a></li>
+         				<li><a href="https://medium.com/@alexandre.diasldev"><i class="fab fa-medium fa-4x"></i></a></li>
+
         		<li><a href="https://www.linkedin.com/in/alexandre-dias-5a8583178/"><i class="fab fa-linkedin fa-4x"></i></a></li>
 
         			</ul>
